--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   "dependencies": {
     "electron-main-window": "^1.0.4",
     "electron-squirrel-startup": "^1.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ini": ">=1.3.6"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.53",
